syntax = "proto3";

package spacex.api.device;

message Request {
  oneof target {
    string dummy = 1;  // Placeholder mercy tweak
  }
}

message Response {
  DishGetStatusResponse dish_get_status = 1;
  // Add more as needed mercy grace
}

message DishGetStatusResponse {
  DeviceInfo device_info = 1;
  DeviceState device_state = 2;
  // Full proto mercy absolute (simplified mercy grace)
}

message DeviceInfo {
  string id = 1;
  string hardware_version = 2;
  string software_version = 3;
}

message DeviceState {
  bool up_to_date = 1;
  float uptime_s = 2;
  bool is_sn = 3;
  // Add more fields mercy absolute
}

service Device {
  rpc Handle(Request) returns (stream Response);
}
